2013-02-11 Aurelien Cedeyn  <aurelien.cedeyn@cea.fr>
	* Reversed actions can be configured

2013-02-07 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Release: 0.10

2013-02-07 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Add vim syntax color support.

2013-02-06 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Add 'before' option and disable WARNING.

2013-01-24 Aurelien Cedeyn  <aurelien.cedeyn@cea.fr>
	* Return key display running informations

2013-01-23 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Add new syntax style for config file.

2013-01-17 Aurelien Cedeyn  <aurelien.cedeyn@cea.fr>
	* Add --quiet option to reduce verbosity

2012-11-09 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Release: 0.9.2