@@ -8,6 +8,7 @@ defnition of the different states that a service can go through
 
 # Classes
 from MilkCheck.Engine.BaseEntity import BaseEntity
+from MilkCheck.ActionManager import action_manager_self
 
 class BaseService(BaseEntity):
     '''
@@ -41,6 +42,7 @@ class BaseService(BaseEntity):
         
         # Prepare the service and start the master task
         self.prepare(action_name)
+        action_manager_self().run()
         
     def prepare(self, action_name=None):
         '''
