@@ -1,5 +1,6 @@
 2013-02-11 Aurelien Cedeyn  <aurelien.cedeyn@cea.fr>
 	* Reversed actions can be configured
+	* Fix parallelism regression.
 
 2013-02-07 Aurelien Degremont  <aurelien.degremont@cea.fr>
 	* Release: 0.10
